--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-url: https://y7kim.github.io
+url: https://bmorohunfola.github.io
 baseurl: /agency-jekyll-theme/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Bunmi Morohunfola
+email: bmorohunfolal@gmail.com
+description: "Bunmi's website"
 
 
 # Team names, titles and social links
@@ -50,7 +50,7 @@ social:
     url:
   - title: stack-overflow
     url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
+  - title: bitbucket
     url: http://bitbucket.org/jekyll
   - title: github
     url: http://github.com/jekyll
